alignment fix on ‘switch to tab’

--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -89,7 +89,7 @@
   font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   background-color: lightgrey;
   color: white;
-  padding: 0 4px;
+  padding: 2px 4px;
 }
 
 .toolbarbutton-1 {}
